# PythonChainable

./: .gitignore  README.en.md  README.md  pyproject.toml  requirements.txt  setup.py
pychain/: __init__.py  chainable.py  common.py  core.py  enum.py  pipeline.py
tests/: test_chainable.py
