[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyChainable"
version = "0.1.0"
authors = [
  { name="mrwuliu", email="mr_wuliu@foxmail.com" },
]
description = "A package for creating chainable method calls in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mr-wuliu/PythonChainable"
Issues = "https://github.com/mr-wuliu/PythonChainable/issues"
